force-app/main/default/objects/LoyaltyPoint__c/LoyaltyPoint__c.object-meta.xml
<CustomObject>
    <label>LoyaltyPoint</label>
    <nameField>
        <label>LoyaltyPoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoyaltyPoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>