force-app/main/default/objects/LoyaltyPoint__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>DeliveryOrder__c</referenceTo>
    <relationshipLabel>Loyalty Points</relationshipLabel>
    <relationshipName>Loyalty_Points</relationshipName>
    <type>Lookup</type>
</CustomField>